--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ black = "^21.7b0"
 pylint = "^2.9.6"
 mypy = "^0.910"
 pre-commit = "^2.13.0"
+requests = "^2.26.0"
+pytest = "^6.2.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
