--- a/.pylintrc
+++ b/.pylintrc
@@ -1,3 +1,6 @@
+[MASTER]
+extension-pkg-whitelist=pydantic
+
 [MESSAGES CONTROL]
 
 # Disable the message, report, category or checker with the given id(s). You
